@@ -1511,9 +1511,9 @@ libbalsa_message_create_mime_message(LibBalsaMessage *message,
 
 #ifdef ENABLE_AUTOCRYPT
     /* add Autocrypt header if requested */
-    if ((message->ident != NULL) && (message->ident->autocrypt_mode != AUTOCRYPT_DISABLE) &&
+    if (!postponing && (message->ident != NULL) && (message->ident->autocrypt_mode != AUTOCRYPT_DISABLE) &&
     	!autocrypt_ignore(g_mime_object_get_content_type(mime_root))) {
-    	tmp = autocrypt_header(message->ident, NULL);
+    	tmp = autocrypt_header(message->ident, error);
     	if (tmp == NULL) {
     		g_object_unref(G_OBJECT(mime_message));
     		return LIBBALSA_MESSAGE_CREATE_ERROR;
